<resources>
    <string name="app_name">Список дел</string>
    <string name="tv_save">Сохранить</string>
    <string name="something_to_do">Что надо сделать…</string>
    <string name="text_important">Важность</string>
    <string name="text_no">Нет</string>
    <string name="text_time_to">Сделать до</string>
    <string name="text_delete">Удалить</string>
    <string name="text_clean">Очистить</string>
    <string name="my_business">Мои дела</string>
    <string name="done_count">Выполнено - %1$d</string>
    <string name="add_first_task">Добавьте задачу</string>
    <string name="data_not_sync">Нет интернет соединения. Загружены локальные данные.</string>
    <string name="error_server_message">Ошибка сервера. Загружены локальные данные.</string>
    <string name="id_not_found_message">Ошибка. Запись с таким ID не найдена.</string>
    <string name="unauthorized_message">Ошибка авторизации.</string>
    <string name="unsynchronized_data_message">Ошибка синхронизации данных.</string>
    <string name="unknown_error_message">Ошибка. Попробуйте ещё раз.</string>
    <string name="Settings">Настройки</string>
    <string name="MainScreen">Главное меню</string>
    <string name="Choose_theme">Выберите тему для приложения</string>
    <string name="dark_theme">Темная тема</string>
    <string name="light_theme">Светлая тема</string>
    <string name="system_theme">Системная тема</string>
    <string name="settings_theme">Настройка темы</string>
    <string name="importance_high">Высокая</string>
    <string name="importance_low">Низкая</string>
    <string name="importance_basic">Обычная</string>
    <string name="сhoose_importance">Выберите степень важности</string>
    <string name="permission_request">Запрос разрешения</string>
    <string name="permission_information">"Мы бы хотели отправлять вам уведомления о событиях с предстоящими дедлайнами. Предоставить разрешение?"</string>
    <string name="ok">Да</string>
    <string name="cancel">Отмена</string>
    <string name="title_text">Напоминание. Задача с важностью:</string>
</resources>