<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            style="@style/H1_MainTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/l_size"
            android:layout_marginTop="@dimen/sl_size"
            android:text="@string/Settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/checkTheme"
            style="@style/SettingsButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/dimView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_round_drawable"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/mm_size"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_round_drawable_small" />

        <TextView
            style="@style/SettingsSheetTopTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Choose_theme" />

        <TextView
            android:id="@+id/darkTheme"
            style="@style/SettingsSheetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dark_theme" />

        <TextView
            android:id="@+id/lightTheme"
            style="@style/SettingsSheetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/light_theme" />

        <TextView
            android:id="@+id/systemTheme"
            style="@style/SettingsSheetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/system_theme" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>