<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addToDoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.addToDo.AddToDoFragment">

<ScrollView
    android:id="@+id/addToDoFragment2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_close_button"
            style="@style/CheckButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mll_size"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_save"
            style="@style/SaveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mll_size"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/mm_size" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/mm_size" />

        <EditText
            android:id="@+id/edit_text_input_text"
            style="@style/HintStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_size"
            android:gravity="start|top"
            android:paddingLeft="@dimen/mm_size"
            android:paddingTop="@dimen/s_size"
            android:paddingRight="@dimen/mm_size"
            android:paddingBottom="@dimen/s_size"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_save" />

        <TextView
            android:id="@+id/tv_priority"
            style="@style/TextViewItemAddStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mll_size"
            android:text="@string/text_important"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_importance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/ic_knob"
            android:track="@drawable/ic_track"
            app:layout_constraintBottom_toBottomOf="@+id/tv_priority"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintTop_toTopOf="@+id/tv_priority"
            app:thumbTint="@drawable/switch_thumb_selector"
            app:trackTint="@drawable/switch_track_selector" />

        <TextView
            android:id="@+id/tv_importance_basic"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority"
            android:text="@string/importance_basic" />

        <TextView
            android:id="@+id/tv_importance_low"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority"
            android:drawableStart="@drawable/ic_priority_low"
            android:drawablePadding="4dp"
            android:text="@string/importance_low" />

        <TextView
            android:id="@+id/tv_importance_high"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority"
            android:drawableStart="@drawable/ic_priority_high"
            android:drawablePadding="4dp"
            android:text="@string/importance_high" />

        <TextView
            android:id="@+id/tv_to_do_until"
            style="@style/TextViewItemAddStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_size"
            android:text="@string/text_time_to"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_do_until"
            tools:text="02 июня 2025" />
<!--
        <TextView
            android:id="@+id/tv_time"
            style="@style/DateStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            tools:text="00:00" />-->

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumb="@drawable/ic_knob"
            android:track="@drawable/ic_track"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date"
            app:layout_constraintEnd_toStartOf="@+id/right_border"
            app:layout_constraintTop_toTopOf="@+id/tv_to_do_until"
            app:thumbTint="@drawable/switch_thumb_selector"
            app:trackTint="@drawable/switch_track_selector" />

        <TextView
            android:id="@+id/tv_delete_to_do"
            style="@style/TrashButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lm_size"
            android:layout_marginBottom="@dimen/lm_size"
            android:drawablePadding="@dimen/mm_size"
            app:drawableStartCompat="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/left_border"
            app:layout_constraintTop_toTopOf="@+id/tv_date" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/iv_todo_anim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed="3"
            app:lottie_rawRes="@raw/delete_animation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <View
        android:id="@+id/dimView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edit_round_drawable"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/mm_size"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_round_drawable_small" />

        <TextView
            style="@style/SettingsSheetTopTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/сhoose_importance" />

        <TextView
            android:id="@+id/bottom_low_importance"
            style="@style/SettingsSheetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/importance_low" />

        <TextView
            android:id="@+id/bottom_basic_importance"
            style="@style/SettingsSheetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/importance_basic" />

        <TextView
            android:id="@+id/bottom_high_importance"
            style="@style/SettingsSheetTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/importance_high" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>